# random-coffee

./: .gitignore  LICENSE.md  README.md  ammo.txt  dev.sh  pyproject.toml  ruff.toml  run.sh
scripts/: create_history.py  create_history_optimized.py  load_history.py  load_history_optimized.py
src/random_pycon_2024_bot/: __init__.py  __main__.py  app.py  controller.py  db.py  deps.py  exceptions.py  handlers.py  messages.py  models.py  persistence.py  settings.py  utils.py
src/scripts/: create_history.py
