[project]
name = "random-pycon-2024-bot"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "notebook>=7.2.1",
    "litestar[full]>=2.9.1",
    "python-telegram-bot>=21.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/random_pycon_2024_bot"]
